--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 fonts/** linguist-vendored
 lib/** linguist-vendored
+tests/** linguist-vendored
+tests/playwright/e2e/unit_test.spec.js linguist-vendored
