--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,7 +25,8 @@ jobs:
           sed 's|\(PHPMYADMIN_PORT\)=.*|\1=13741|' |
           sed 's|\(MAILHOG_PORT\)=.*|\1=13745|' > .env
           sed -i 's|\(FROM php\):.*|\1:7.4.5-apache-buster|' docker-web/Dockerfile
-          sed -i 's|&& pecl install xdebug|&& pecl install xdebug-3.1.4|' docker-web/Dockerfile
+          sed -i 's|&& pecl install xdebug||' docker-web/Dockerfile
+          sed -i 's|&& echo "zend_extension=$(find.*||' docker-web/Dockerfile
           sed -i 's|FROM mysql:8.0-oracle|FROM mysql:8.0|' docker-mysql/Dockerfile
       - name: Start Docker REDCap Container
         working-directory: ./redcap-docker-compose/rdc
