--- a/.github/workflows/playwright_PHP8.2_REDCap13.1.27.yml
+++ b/.github/workflows/playwright_PHP8.2_REDCap13.1.27.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           path: security_access_groups
       - name: Move REDCap Source File
-        run: mv redcap.*.zip security_access_groups/tests/playwright/setup/
+        run: mv redcap13.1.27.zip security_access_groups/tests/playwright/setup/
       - uses: actions/setup-node@v3
         with:
           node-version: 18
