--- a/.github/workflows/playwright_PHP7.4.5_REDCap13.1.27.yml
+++ b/.github/workflows/playwright_PHP7.4.5_REDCap13.1.27.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Run Playwright tests
         working-directory: ./redcap-docker-compose/www/modules/security_access_groups_v99/tests/playwright
         run: |
-          sed -i 's|redcapVersion:.*|redcapVersion: "redcap_v13.1.27"|' fixtures/config.js
+          sed -i 's|redcapVersion:.*|redcapVersion: "redcap_v13.1.27",|' fixtures/config.js
           npx playwright test
       - uses: actions/upload-artifact@v3
         if: always()
