--- a/.github/workflows/playwright_PHP8.2_REDCap13.7.13.yml
+++ b/.github/workflows/playwright_PHP8.2_REDCap13.7.13.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Run Playwright tests
         working-directory: ./redcap-docker-compose/www/modules/security_access_groups_v99/tests/playwright
         run: |
-          sed -i 's|redcapVersion:.*|redcapVersion: "redcap_v13.7.13"|' fixtures/config.js
+          sed -i 's|redcapVersion:.*|redcapVersion: "redcap_v13.7.13",|' fixtures/config.js
           npx playwright test
       - uses: actions/upload-artifact@v3
         if: always()
