--- a/.github/workflows/playwright_PHP8.2_REDCap13.11.4.yml
+++ b/.github/workflows/playwright_PHP8.2_REDCap13.11.4.yml
@@ -26,7 +26,7 @@ jobs:
           sed 's|\(MAILHOG_PORT\)=.*|\1=13745|' > .env
       - name: Start Docker REDCap Container
         working-directory: ./redcap-docker-compose/rdc
-        run: docker-compose up -d
+        run: docker compose up -d
       - uses: actions/checkout@v4
         with:
           path: security_access_groups
