--- a/.github/workflows/playwright_PHP7.4.5_REDCap14.7.0_new.yml
+++ b/.github/workflows/playwright_PHP7.4.5_REDCap14.7.0_new.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Build the REDCap Image
         run: |
           git clone https://github.com/AndrewPoppe/redcap-docker.git
+          mkdir redcap-docker/testing_container/data
           mv redcap14.7.0.zip redcap-docker/testing_container/data
           cd redcap-docker/testing_container/data
           unzip redcap14.7.0.zip
