--- a/.github/workflows/playwright_PHP7.4.5_REDCap14.7.0_new.yml
+++ b/.github/workflows/playwright_PHP7.4.5_REDCap14.7.0_new.yml
@@ -55,6 +55,7 @@ jobs:
         working-directory: ./redcap-docker/testing_container/data/redcap/modules/security_access_groups_v99/tests/playwright
         run: |
           sed -i 's|redcapVersion:.*|redcapVersion: "redcap_v14.7.0",|' fixtures/config.js
+          sed -i 's|redcapUrl:.*|redcapUrl: "http://localhost",|' fixtures/config.js
           npx playwright test
       - uses: actions/upload-artifact@v4
         if: failure()
