--- a/.github/workflows/playwright_PHP8.2_REDCap14.0.0.yml
+++ b/.github/workflows/playwright_PHP8.2_REDCap14.0.0.yml
@@ -16,22 +16,19 @@ jobs:
           persist-credentials: false
       - name: Build the REDCap Image
         run: |
-          git clone https://github.com/AndrewPoppe/redcap-docker-compose.git
-          cd redcap-docker-compose/rdc
-          sed 's|\(DOCKER_PREFIX\)=.*|\1=rc13_php7.4|' .env-example |
-          sed 's|\(TZ\)=.*|\1=America/New_York|' |
-          sed 's|\(WEB_PORT\)=.*|\1=13740|' |
-          sed 's|\(MYSQL_PORT\)=.*|\1=13746|' |
-          sed 's|\(PHPMYADMIN_PORT\)=.*|\1=13741|' |
-          sed 's|\(MAILHOG_PORT\)=.*|\1=13745|' > .env
+          git clone https://github.com/AndrewPoppe/redcap-docker.git
+          mkdir redcap-docker/testing_container/data
+          mv redcap14.0.0.zip redcap-docker/testing_container/data
+          cd redcap-docker/testing_container/data
+          unzip redcap14.0.0.zip
       - name: Start Docker REDCap Container
-        working-directory: ./redcap-docker-compose/rdc
-        run: docker compose up -d
+        working-directory: ./redcap-docker/testing_container
+        run: |
+          docker compose pull
+          docker compose up -d --wait
       - uses: actions/checkout@v4
         with:
           path: security_access_groups
-      - name: Move REDCap Source File
-        run: mv redcap14.0.0.zip security_access_groups/tests/playwright/setup/
       - uses: actions/setup-node@v4
         with:
           node-version: 21
@@ -41,35 +38,25 @@ jobs:
       - name: Install Playwright Browsers
         working-directory: ./security_access_groups/tests/playwright
         run: npx playwright install --with-deps
-      - name: Initialize REDCap
-        working-directory: ./security_access_groups/tests/playwright/setup
-        run: |
-          sed -i 's|ZIPFILE|redcap14.0.0.zip|' installREDCap.js
-          node installREDCap.js
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: setup
-          path: ./security_access_groups/tests/playwright/setup/screenshots
-          retention-days: 30
       - name: Move module files
         run: |
-          sudo chmod -R 777 ./redcap-docker-compose/www/modules
-          mv ./security_access_groups ./redcap-docker-compose/www/modules/security_access_groups_v99
+          sudo chmod -R 777 ./redcap-docker/testing_container/data/redcap/modules
+          mv ./security_access_groups ./redcap-docker/testing_container/data/redcap/modules/security_access_groups_v99
       - name: Run Playwright tests
-        working-directory: ./redcap-docker-compose/www/modules/security_access_groups_v99/tests/playwright
+        working-directory: ./redcap-docker/testing_container/data/redcap/modules/security_access_groups_v99/tests/playwright
         run: |
           sed -i 's|redcapVersion:.*|redcapVersion: "redcap_v14.0.0",|' fixtures/config.js
+          sed -i 's|redcapUrl:.*|redcapUrl: "http://localhost",|' fixtures/config.js
           npx playwright test
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: playwright-report
-          path: ./redcap-docker-compose/www/modules/security_access_groups_v99/tests/playwright/playwright-report/
+          path: ./redcap-docker/testing_container/data/redcap/modules/security_access_groups_v99/tests/playwright/playwright-report/
           retention-days: 30
       - uses: actions/upload-artifact@v4
         if: success()
         with:
           name: test-results
-          path: ./redcap-docker-compose/www/modules/security_access_groups_v99/tests/playwright/test-results/
+          path: ./redcap-docker/testing_container/data/redcap/modules/security_access_groups_v99/tests/playwright/test-results/
           retention-days: 30
