--- a/.github/workflows/playwright_PHP7.4.5_REDCap14.0.44.yml
+++ b/.github/workflows/playwright_PHP7.4.5_REDCap14.0.44.yml
@@ -1,4 +1,4 @@
-name: PHP8.2 RC14.0.0
+name: PHP7.4 RC14.0.44
 on:
   push:
     branches: main
@@ -11,19 +11,20 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: AndrewPoppe/redcap_source
-          ref: v14.0.0_zip
+          ref: v14.0.44_zip
           token: ${{ secrets.REPOS_TOKEN }}
           persist-credentials: false
       - name: Build the REDCap Image
         run: |
           git clone https://github.com/AndrewPoppe/redcap-docker.git
           mkdir redcap-docker/testing_container/data
-          mv redcap14.0.0.zip redcap-docker/testing_container/data
+          mv redcap14.0.44.zip redcap-docker/testing_container/data
           cd redcap-docker/testing_container/data
-          unzip redcap14.0.0.zip
+          unzip redcap14.0.44.zip
       - name: Start Docker REDCap Container
         working-directory: ./redcap-docker/testing_container
         run: |
+          sed -i 's|FROM php:8.2-apache-buster|FROM php:7.4-apache-buster|' ../Dockerfile
           docker compose pull
           docker compose up -d --wait
       - uses: actions/checkout@v4
@@ -45,7 +46,7 @@ jobs:
       - name: Run Playwright tests
         working-directory: ./redcap-docker/testing_container/data/redcap/modules/security_access_groups_v99/tests/playwright
         run: |
-          sed -i 's|redcapVersion:.*|redcapVersion: "redcap_v14.0.0",|' fixtures/config.js
+          sed -i 's|redcapVersion:.*|redcapVersion: "redcap_v14.0.44",|' fixtures/config.js
           sed -i 's|redcapUrl:.*|redcapUrl: "http://localhost",|' fixtures/config.js
           npx playwright test
       - uses: actions/upload-artifact@v4
