--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
           token: ${{ secrets.REPOS_TOKEN }}
           persist-credentials: false
       - name: Use Latest Release Tag
-        run: echo "The latest release tag is: ${{ steps.get_latest_release.outputs.tag_name }}"
+        run: echo "The latest release tag is ${{ steps.get_latest_release.outputs.tag_name }}"
       - name: Build the REDCap Image
         run: |
           git clone https://github.com/AndrewPoppe/redcap-docker.git
