--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,28 +8,24 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: robinraju/release-downloader@v1
         with:
-          repository: AndrewPoppe/redcap_source
-          ref: v14.7.0_zip
+          repository: vanderbilt-redcap/REDCap
+          latest: true
+          fileName: '*.zip'
+          tarBall: false
+          zipBall: false
           token: ${{ secrets.REPOS_TOKEN }}
-          persist-credentials: false
-      - name: Get Latest Release
-        id: get_latest_release
-        uses: actions/get-latest-release@v1
-        with:
-          repo: vanderbilt-redcap/REDCap
-          token: ${{ secrets.REPOS_TOKEN }}
-          persist-credentials: false
-      - name: Use Latest Release Tag
-        run: echo "The latest release tag is ${{ steps.get_latest_release.outputs.tag_name }}"
+      - name: Print the thing
+        run: echo ${{ fromJson(steps.<step-id>.outputs.downloaded_files)[0] }}
       - name: Build the REDCap Image
         run: |
           git clone https://github.com/AndrewPoppe/redcap-docker.git
           mkdir redcap-docker/testing_container/data
-          mv redcap14.7.0.zip redcap-docker/testing_container/data
+          zipfile=${{ fromJson(steps.<step-id>.outputs.downloaded_files)[0] }}
+          mv $zipfile redcap-docker/testing_container/data
           cd redcap-docker/testing_container/data
-          unzip redcap14.7.0.zip
+          unzip $zipfile
       - name: Start Docker REDCap Container
         working-directory: ./redcap-docker/testing_container
         run: |
