--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
+      - id: download
       - uses: robinraju/release-downloader@v1
         with:
           repository: vanderbilt-redcap/REDCap
@@ -17,12 +18,12 @@ jobs:
           zipBall: false
           token: ${{ secrets.REPOS_TOKEN }}
       - name: Print the thing
-        run: echo ${{ fromJson(steps.<step-id>.outputs.downloaded_files)[0] }}
+        run: echo ${{ fromJson(steps.download.outputs.downloaded_files)[0] }}
       - name: Build the REDCap Image
         run: |
           git clone https://github.com/AndrewPoppe/redcap-docker.git
           mkdir redcap-docker/testing_container/data
-          zipfile=${{ fromJson(steps.<step-id>.outputs.downloaded_files)[0] }}
+          zipfile=${{ fromJson(steps.download.outputs.downloaded_files)[0] }}
           mv $zipfile redcap-docker/testing_container/data
           cd redcap-docker/testing_container/data
           unzip $zipfile
