--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: download
-      - uses: robinraju/release-downloader@v1
+        uses: robinraju/release-downloader@v1
         with:
           repository: vanderbilt-redcap/REDCap
           latest: true
