--- a/.github/workflows/playwright_v15.5.12.yml
+++ b/.github/workflows/playwright_v15.5.12.yml
@@ -1,4 +1,4 @@
-name: PHP8.4 RC15.0.38
+name: v15.5.12
 on:
   push:
     branches: main
@@ -11,16 +11,16 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: AndrewPoppe/redcap_source
-          ref: v15.0.38_zip
+          ref: v15.5.12_zip
           token: ${{ secrets.REPOS_TOKEN }}
           persist-credentials: false
       - name: Build the REDCap Image
         run: |
           git clone https://github.com/AndrewPoppe/redcap-docker.git
           mkdir redcap-docker/testing_container/data
-          mv redcap15.0.38.zip redcap-docker/testing_container/data
+          mv redcap15.5.12.zip redcap-docker/testing_container/data
           cd redcap-docker/testing_container/data
-          unzip redcap15.0.38.zip
+          unzip redcap15.5.12.zip
       - name: Start Docker REDCap Container
         working-directory: ./redcap-docker/testing_container
         run: |
@@ -45,7 +45,7 @@ jobs:
       - name: Run Playwright tests
         working-directory: ./redcap-docker/testing_container/data/redcap/modules/security_access_groups_v99/tests/playwright
         run: |
-          sed -i 's|redcapVersion:.*|redcapVersion: "redcap_v15.0.38",|' fixtures/config.js
+          sed -i 's|redcapVersion:.*|redcapVersion: "redcap_v15.5.12",|' fixtures/config.js
           sed -i 's|redcapUrl:.*|redcapUrl: "http://localhost",|' fixtures/config.js
           npx playwright test
       - uses: actions/upload-artifact@v4
