--- a/.github/workflows/playwright_v15.7.3.yml
+++ b/.github/workflows/playwright_v15.7.3.yml
@@ -12,8 +12,8 @@ jobs:
         with:
           repository: AndrewPoppe/redcap_source
           ref: v15.7.3_zip
-          token: ${{ secrets.GITHUB_TOKEN }}
-          persist-credentials: false
+          token: ${{ secrets.REPOS_TOKEN }}
+          persist-credentials: true
       - name: Build the REDCap Image
         run: |
           git clone https://github.com/AndrewPoppe/redcap-docker.git
