Change persist-credentials to false in workflow

--- a/.github/workflows/playwright_v15.7.3.yml
+++ b/.github/workflows/playwright_v15.7.3.yml
@@ -13,7 +13,7 @@ jobs:
           repository: AndrewPoppe/redcap_source
           ref: v15.7.3_zip
           token: ${{ secrets.REPOS_TOKEN }}
-          persist-credentials: true
+          persist-credentials: false
       - name: Build the REDCap Image
         run: |
           git clone https://github.com/AndrewPoppe/redcap-docker.git
